# typing-game

client/: Dockerfile  README.md  commit.sh  deploy.sh  package-lock.json  package.json
client/src/: App.vue  index.css  main.ts
client/src/data/models/: account.ts  auth.ts  index.ts  networking.ts  test.ts
client/src/data/services/: account.ts  auth.ts  index.ts  metrics.ts  test.ts
client/src/hooks/: axiosHook.ts  localStateHook.ts
client/src/router/: index.ts
client/src/store/: index.ts
client/src/views/: About.vue  Account.vue  Home.vue  Login.vue
docker/: docker-compose-type-hero.yml  docker-compose.yml
docker/postgis/: Dockerfile  deploy.sh
docs/: mkdocs.yml
docs/docs/: about.md
rust-api/: .env  Cargo.toml  Dockerfile  deploy.sh
rust-api/src/: main.rs
rust-api/src/handlers/: account_handler.rs  auth_handler.rs  mod.rs  test_handler.rs  test_handlers.rs
rust-api/src/store/: mod.rs
rust-api/src/store/models/: auth.rs  test.rs
rust-api/src/store/pgstore/: account.rs  auth.rs  migration.rs  mod.rs  test.rs
