[package]
edition = "2021"
name = "rust-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.0-beta.4"
actix-web = "4"
deadpool-postgres = {version = "0.10.2", features = ["serde"]}
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = {version = "1.0.137", features = ["derive"]}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
