[package]
edition = "2021"
name = "rust-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.2.1"
bcrypt = "0.13.0"
dotenv = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
